--- a/index.html
+++ b/index.html
@@ -74,8 +74,14 @@
         <div class="container">
             <a href="#"><img src="img/Favoritos.svg" alt="logo favoritos"
                     class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="img/Compras.svg" alt="logo compas" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="meu usuário" class="container__imagem"></a>
+            <a href="#" class="container__link">
+                <img src="img/Compras.svg" alt="logo compas" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuario.svg" alt="meu usuário" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -85,95 +91,86 @@
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos lançamentos</h2>
-
         <!-- Inicio da API-->
-        <div class="swiper">
-
-            <div class="swiper-pagination"></div>
-
-            <div class="swiper-wrapper">
-
-                <div class="swiper-slide"><img src="img/Angular.svg" alt="Livro-Angular"></div>
-                <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro-ApacheKafka"></div>
-                <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro-Guia Front-end"></div>
-                <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro-Nodejs"></div>
-                <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro-ReactNative"></div>
-                <div class="swiper-slide"><img src="img/MEAN.svg" alt="Livro-MEAN"></div>
-            </div>
-
-        </div>
-        <!-- Fim da API-->
-
-        <div class="card">
-            <!--1° linha-->
-            <div class="card__descrição">
-                <!--1° coluna-->
-                <div class="descrição">
-                    <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="img/Angular.svg" alt="Livro-Angular"></div>
+                    <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro-ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro-Guia Front-end"></div>
+                    <div class="swiper-slide"><img src="img/Nodejs.svg" alt="Livro-Nodejs"></div>
+                    <div class="swiper-slide"><img src="img/ReactNative.svg" alt="Livro-ReactNative"></div>
+                    <div class="swiper-slide"><img src="img/MEAN.svg" alt="Livro-MEAN"></div>
                 </div>
-                <!--2° coluna-->
-                <img src="img/Angular-img.svg" alt="" class="descrição__imagem">
             </div>
-            <!--2° linha-->
-            <div class="card__botões">
-                <!--1° coluna-->
-                <ul class="botões">
-                    <li class="botões__item"><img src="img/Favoritos.svg" alt="Icone Favoritos"></li>
-                    <li class="botões__item"><img src="img/Compras.svg" alt="Icone Compras"></li>
-                </ul>
-                <a href="#" class="botões__ancora">Saiba mais</a>
+            <!-- Fim da API-->
+            <div class="card">
+                <!--1° linha-->
+                <div class="card__descrição">
+                    <!--1° coluna-->
+                    <div class="descrição">
+                        <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <!--2° coluna-->
+                    <img src="img/Angular-img.svg" alt="" class="descrição__imagem">
+                </div>
+                <!--2° linha-->
+                <div class="card__botões">
+                    <!--1° coluna-->
+                    <ul class="botões">
+                        <li class="botões__item"><img src="img/Favoritos.svg" alt="Icone Favoritos"></li>
+                        <li class="botões__item"><img src="img/Compras.svg" alt="Icone Compras"></li>
+                    </ul>
+                    <a href="#" class="botões__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
-
     <section class="carroseel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
-
         <!-- Inicio da API-->
-        <div class="swiper">
-
-            <div class="swiper-pagination"></div>
-
-            <div class="swiper-wrapper">
-
-                <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro-Angular"></div>
-                <div class="swiper-slide"><img src="img/Gestão2.svg" alt="Livro-ApacheKafka"></div>
-                <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro-Guia Front-end"></div>
-                <div class="swiper-slide"><img src="img/Tuning.svg" alt="Livro-Nodejs"></div>
-                <div class="swiper-slide"><img src="img/Construct2.svg" alt="Livro-ReactNative"></div>
-                <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro-MEAN"></div>
-            </div>
-
-        </div>
-        <!-- Fim da API-->
-
-        <div class="card">
-            <!--1° linha-->
-            <div class="card__descrição">
-                <!--1° coluna-->
-                <div class="descrição">
-                    <img src="img/Estrelinhas.svg" alt="Estrelinhas" class="card__estrelinhas">
-                    <h3 class="descrição__titulo">Autora do Mês</h3>
-                    <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
+        <div class="carrossel__container">
+            <div class="swiper">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="img/Gestão.svg" alt="Livro-Angular"></div>
+                    <div class="swiper-slide"><img src="img/Gestão2.svg" alt="Livro-ApacheKafka"></div>
+                    <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro-Guia Front-end"></div>
+                    <div class="swiper-slide"><img src="img/Tuning.svg" alt="Livro-Nodejs"></div>
+                    <div class="swiper-slide"><img src="img/Construct2.svg" alt="Livro-ReactNative"></div>
+                    <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro-MEAN"></div>
                 </div>
-                <!--2° coluna-->
-                <img src="../img/Perfil-escritora 1.svg" alt="Imagem livro Angular" class="descrição__imagem">
             </div>
-            <!--2° linha-->
-            <div class="card__botões">
-                <!--1° coluna-->
-                <ul class="botões">
-                    <li class="botões__item"><img src="img/Favoritos.svg" alt="Icone Favoritos"></li>
-                    <li class="botões__item"><img src="img/Compras.svg" alt="Icone Compras"></li>
-                </ul>
-                <a href="#" class="botões__ancora">Saiba mais</a>
+            <!-- Fim da API-->
+            <div class="card">
+                <!--1° linha-->
+                <div class="card__descrição">
+                    <!--1° coluna-->
+                    <div class="descrição">
+                        <img src="img/Estrelinhas.svg" alt="Estrelinhas" class="card__estrelinhas">
+                        <h3 class="descrição__titulo">Autora do Mês</h3>
+                        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <!--2° coluna-->
+                    <img src="../img/Perfil-escritora 1.svg" alt="Imagem livro Angular" class="descrição__imagem">
+                </div>
+                <!--2° linha-->
+                <div class="card__botões">
+                    <!--1° coluna-->
+                    <ul class="botões">
+                        <li class="botões__item"><img src="img/Favoritos.svg" alt="Icone Favoritos"></li>
+                        <li class="botões__item"><img src="img/Compras.svg" alt="Icone Compras"></li>
+                    </ul>
+                    <a href="#" class="botões__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
-
     </section>
     <section class="tópicos">
         <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
@@ -207,8 +204,8 @@
     </section>
     <section class="contato">
         <div class="contato__descrição">
-        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
         </div>
         <input type="email" placeholder="Cadastre o seu e-mail" class="contato__email">
     </section>
@@ -217,6 +214,77 @@
 
     <footer class="rodapé">
         <h2 class="rodapé__titulo">Grupo Alura</h2>
+        <ul class="lista-rodapé">
+            <li class="lista-rodapé__titulo">Educação</li>
+            <li class="lista-rodapé__item">
+                <img src="img/CasaDoCodigo.svg" alt="Logo da casa do código">
+                <a href="#" class="lista-rodapé__link">Casa do código</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/Caelum.svg" alt="Logo da Caelum">
+                <a href="#" class="lista-rodapé__link">Caelum</a>
+            </li>
+        </ul>
+        <ul class="lista-rodapé">
+            <li class="lista-rodapé__titulo">Educação Online</li>
+            <li class="lista-rodapé__item">
+                <img src="img/Alura.svg" alt="Logo da Alura">
+                <a href="#" class="lista-rodapé__link">Alura</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraEmpresas.svg" alt="Alura para Empresas">
+                <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraLatam.svg" alt="Logo da Alura Latam">
+                <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraStart.svg" alt="Logo da Alura Start">
+                <a href="#" class="lista-rodapé__link">Alura Start</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/MusicDot.svg" alt="Logo MusicDot">
+                <a href="#" class="lista-rodapé__link">MusicDot</a>
+            </li>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/AluraLingua.svg" alt="Logo Alura Língua">
+                <a href="#" class="lista-rodapé__link">Alura Língua</a>
+            </li>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/PM3.svg" alt="Logo PM3">
+                <a href="#" class="lista-rodapé__link">PM3</a>
+            </li>
+        </ul>
+        <ul class="lista-rodapé">
+            <li class="lista-rodapé__titulo"> Comunidade</li>
+            <li class="lista-rodapé__item">
+                <img src="img/Scuba.svg" alt="Scuba Dev">
+                <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/Layers.svg" alt="Layers ponto Tech">
+                <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/LikeABoss.svg" alt="Logo LikeABoss">
+                <a href="#" class="lista-rodapé__link">Like a Boss</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/CarreiraSemFronteira.svg" alt="Logo Carreira sem Fronteira">
+                <a href="#" class="lista-rodapé__link">Carreira sem Fronteira</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/HipstersJobs.svg" alt="Logo Hipsters Jobs">
+                <a href="#" class="lista-rodapé__link">Hipsters ponto Jobs</a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="img/GUJ.svg" alt="Logo GUJ">
+                <a href="#" class="lista-rodapé__link">GUJ</a>
+            </li>
+        </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -232,4 +300,4 @@
     </script>
 </body>
 
-</html>
+</html
