--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poppins:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
@@ -189,13 +188,13 @@
             </li>
             <li><button class="btn btn-dados" href="#" id="btnFiltrarLivrosDados" value="dados">LIVROS DE DADOS</button>
             </li>
-            <li><button class="btn btn-disponiveis" href="#" id="btnLivrosDisponiveis">LIVROS DISPONÍVEIS</button></li>
+            <li><button class="btn btn-disponiveis" href="#" id="btnLivrosDisponiveis" value="disponivel">LIVROS DISPONÍVEIS</button></li>
             <li><button class="btn btn-ordenacao" href="#" id="btnOrdenarPorPreco">ORDENAR POR PREÇO</button></li>
         </ul>
     </div>
     <div class="wrap__livros">
-        <section class="livros" id="livros">
-            <div class="livro">
+        <section class="livros warp" id="livros">
+        <!-- <div class="livro">
                 <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png"
                     alt="Capa do livro Cangaceiro JavaScript" />
                 <h2 class="livro__titulo">
@@ -427,7 +426,7 @@
                     <span class="tag">Front-end</span>
                     <span class="tag">Back-end</span>
                 </div>
-            </div>
+            </div> -->
         </section>
     </div>
 
@@ -545,8 +544,13 @@
             </li>
         </ul>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <script src="app/main.js"></script>
+    <script src="app/metodoForEach.js"></script>
+    <script src="app/metodoMap.js"></script>
+    <script src="app/metodoFilter.js"></script>
+    <script src="app/metodosort.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
